create js of logi  page

--- a/sales.html
+++ b/sales.html
@@ -115,6 +115,7 @@
            <p class="card-text">Blossom Sale </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
            <p><del>60$</del><sub><ins>50$</ins></sub></p>
+         <p><button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
           <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -125,6 +126,7 @@
            <p class="card-text">Floral Deals </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
            <p><del>70$</del><sub><ins>55$</ins></sub></p>
+           <p><button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
              <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -135,6 +137,7 @@
            <p class="card-text">Petal Prices </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
            <p><del>100$</del><sub><ins>70$</ins></sub></p>
+           <p><button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -145,6 +148,7 @@
            <p class="card-text">Bloom & Save </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
            <p><del>50$</del><sub><ins>30$</ins></sub></p>
+           <p><button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -155,6 +159,7 @@
            <p class="card-text">The Rose Sale </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
            <p><del>70$</del><sub><ins>35$</ins></sub></p>
+           <p><button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -165,6 +170,7 @@
            <p class="card-text">Evergreen Deals </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
            <p><del>40$</del><sub><ins>20$</ins></sub></p>
+           <p><button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -175,6 +181,7 @@
            <p class="card-text">Artificial Beauty, Authentic Savings </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
            <p><del>150$</del><sub><ins>125$</ins></sub></p>
+           <p><button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -185,6 +192,7 @@
            <p class="card-text">Green Vibes, Great Deals </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
            <p><del>200$</del><sub><ins>145$</ins></sub></p>
+           <p><button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
           <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -195,6 +203,7 @@
            <p class="card-text">Damask Rose Basket </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
            <p><del>10$</del><sub><ins>5$</ins></sub></p>
+           <p><button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
      </div>
