--- a/Login.html
+++ b/Login.html
@@ -62,10 +62,10 @@
       <p class="text-center mb-4 text-decoration-underline "><a href="createAccount.html" class="text-primary-emphasis fw-normal">Create Account</a></p>
    </div>
    <div class="border border-2  col-lg-5 col-md-8  m-auto border-secondary-subtle mb-5 rounded-4 blur">
-    <form action="" class="">
-      <input type="email" placeholder="Email">
+    <form action="" id="login">
+      <input type="email" id="email2" placeholder="Email">
       <div></div>
-      <input type="password" placeholder="Password" >
+      <input type="password" id="password" placeholder="Password" >
            <div style="width: 349px;" class="d-flex justify-content-start align-items-center m-auto" ><small><a href="" class="text-primary-emphasis text-center mb-4  text-decoration-underline">Forget password?</a></small></div>
       <div><input type="submit"></div>
     </form>
@@ -111,6 +111,7 @@
     <div class="copyRight">	&copy; 2025 PoseyShop copyRight</div>
 </footer>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+ <script src="assets/js/script.js"></script>
 </body>
 </html>
