--- a/cart.html
+++ b/cart.html
@@ -13,7 +13,7 @@
       <div class="announce">
       <p>Last Chance For Mother's Day Delivery - Order By Friday At 4PM ! <a href="mother'sDay.html">Shop Now!</a></p>
     </div>
-     <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand " aria-current="page" href="index.html">Posey shop</a>
 
@@ -39,14 +39,80 @@
           <a class="nav-link" aria-current="page" href="AboutUs.html">About us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="contact.html">Contact</a>
+          <a class="nav-link " aria-current="page" href="contact.html">Contact</a>
         </li>
       </ul>
 
       <div class="d-flex gap-4 navContent">
         <div>
         <a href="Login.html" class="text-decoration-none">Login</a>
-        <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></div>
+        <a href="cart.html" class="position-relative"><i class="fa-solid fa-cart-shopping "></i>           
+        <span id="counter" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-dark " style="padding:1px 2px ;">0</span>
+     </a></div>
+      </div>
+    </div>
+  </div>
+</nav>
+   
+  <body>
+
+  <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" style="padding: 20px 10px;">
+    <div class="container">
+      <a class="navbar-brand" href="index.html" style="color: var(--primary2); font-family: var(--font); font-weight: bolder; font-size: 25px;">Posey shop</a>
+    </div>
+  </nav>
+ <main>
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+     <link href="assets/css/all.min.css" rel="stylesheet"></link>
+     <link rel="stylesheet" href="assets/css/style.css">
+     <link rel="stylesheet" href="assets/css/media.css">
+    <title>Cart</title>
+</head>
+<body>
+      <div class="announce">
+      <p>Last Chance For Mother's Day Delivery - Order By Friday At 4PM ! <a href="mother'sDay.html">Shop Now!</a></p>
+    </div>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand " aria-current="page" href="index.html">Posey shop</a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 align-items-center">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Shop
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="flowers.html">Flowers</a></li>
+            <li><a class="dropdown-item" href="sales.html">Sales</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="plants.html">Plants</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="AboutUs.html">About us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " aria-current="page" href="contact.html">Contact</a>
+        </li>
+      </ul>
+
+      <div class="d-flex gap-4 navContent">
+        <div>
+        <a href="Login.html" class="text-decoration-none">Login</a>
+        <a href="cart.html" class="position-relative"><i class="fa-solid fa-cart-shopping "></i>           
+        <span id="counter" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-dark " style="padding:1px 2px ;">0</span>
+     </a></div>
       </div>
     </div>
   </div>
@@ -61,43 +127,41 @@
     </div>
   </nav>
 
-  <div class="container">
-    <h2>Your Shopping Cart</h2>
+  <div class="container my-5">
+  <h2>Your Shopping Cart</h2>
 
-    <div id="cart-container">
-      <table class="table table-bordered align-middle bg-white shadow-sm rounded-3">
-        <thead class="table-light">
-          <tr>
-            <th scope="col">Product</th>
-            <th scope="col" style="width: 120px;">Price</th>
-            <th scope="col" style="width: 120px;">Quantity</th>
-            <th scope="col" style="width: 120px;">Total</th>
-            <th scope="col" style="width: 80px;"></th>
-          </tr>
-        </thead>
-        <tbody id="cart-items">
-        </tbody>
-      </table>
+  <table class="table table-bordered align-middle bg-white shadow-sm rounded-3">
+    <thead class="table-light">
+      <tr>
+        <th>Product</th>
+        <th style="width: 120px;">Price</th>
+        <th style="width: 120px;">Quantity</th>
+        <th style="width: 120px;">Total</th>
+        <th style="width: 80px;">Action</th>
+      </tr>
+    </thead>
+    <tbody id="cart-items"></tbody>
+  </table>
 
-      <div class="cart-summary" id="cart-total">
-        Total: $0.00
-      </div>
-
-      <div class="text-end mt-4">
-        <button class="btn btn-primary" id="checkout-btn" disabled>Checkout</button>
-      </div>
+  <div class="d-flex justify-content-between align-items-center mt-3">
+    <div>
+      <button id="clear-cart" class="btn btn-warning">Clear Cart</button>
     </div>
-
-    <div id="empty-cart-message" class="empty-cart d-none">
-      Your cart is empty. <a href="flowers.html" style="color: var(--primary2); text-decoration: underline;">Shop now!</a>
+    <div>
+      <strong>Total Items: </strong><span id="total-items">0</span>
+      &nbsp;&nbsp;&nbsp;
+      <strong>Total Price: </strong>$<span id="total-price">0.00</span>
     </div>
   </div>
+</div>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/script.js"></script>
 </section>
     </main>
     <footer class="bg-body-tertiary">
+
   <div class="container">
   <div class="row gap-5">
     <div class="col-lg-3 col-md-5 col-sm-12 ">
@@ -135,5 +199,53 @@
     </div>
     <div class="copyRight">	&copy; 2025 PoseyShop copyRight</div>
 </footer>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+<script src="assets/js/script.js" ></script>
+<script src="assets/js/cart.js"></script>
+</body>
+</html>
+    </main>
+    <footer class="bg-body-tertiary">
+
+  <div class="container">
+  <div class="row gap-5">
+    <div class="col-lg-3 col-md-5 col-sm-12 ">
+      <a href="index.html">
+      <div class="imgFooter">
+        <img src="assets/images/RoseyIcon.jpeg" alt="">
+      </div>
+      </a>
+      <p>One bouquet away from making them smile!</p>
+      <div><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a> <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i> </a><a href="https://www.tiktok.com/download"><i class="fa-brands fa-tiktok"></i></a> <a href="https://www.pinterest.com/"><i class="fa-brands fa-pinterest"></i></a></div>
+    </div> 
+    <div class="col-lg-2 col-md-5 col-sm-12"> 
+    <ul>
+      <li><p>Shop</p></li>
+      <li><a href="flowers.html">FLowers</a></li>
+      <li><a href="plants.html">plants</a></li>
+      <li><a href="sales.html">Sales</a></li>
+    </ul>
+    </div>
+     <div class="col-lg-2 col-md-5 col-sm-12"> 
+    <ul>
+      <li><p>Help</p></li>
+      <li><a href="AboutUs.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="">+970 567984321</a></li>
+    </ul>
+    </div>
+    <div class="col-lg-3 col-md-5 col-sm-12"> 
+      <form action="">
+      <label for="email">Subscribe For 20% Off, Early Access To Limited Edition Stems, & Useful Care Tips</label>
+      <input type="Email" id="email" placeholder="Your email">
+      <input type="Submit">
+     </form>
+    </div>
+    </div>
+    <div class="copyRight">	&copy; 2025 PoseyShop copyRight</div>
+</footer>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+<script src="assets/js/cart.js" ></script>
+
 </body>
 </html>
