--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
       </ul>
         <div class="d-flex gap-4 navContent">
         <a href="Login.html" class="text-decoration-none">Login</a>
-        <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+        <a href="cart.html" class="position-relative"><i class="fa-solid fa-cart-shopping "></i>           
+        <span id="counter" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-dark " style="padding:1px 2px ;">0</span>
+     </a>
       </div>
     </div>
   </div>
@@ -277,5 +279,6 @@
     <div class="copyRight">	&copy; 2025 PoseyShop copyRight</div>
 </footer>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+<script src="assets/js/script.js"></script>
 </body>
 </html>
