--- a/createAccount.html
+++ b/createAccount.html
@@ -58,11 +58,11 @@
       <p class="text-center mb-4 fw-semibold">We’re delighted to have you with us and wish you a wonderful shopping experience full of fragrance and </p>
       <p class="text-center mb-4 fw-normal">Do you already have an account on our store?</p>
       <p class="text-center mb-4 text-decoration-underline "><a href="Login.html" class="text-primary-emphasis fw-normal">Login</a></p>
-      <form action="" class=" p-4 m-auto border-secondary-subtle mb-5  rounded-4 blur">
-        <input type="text" placeholder="First Name" >
-        <input type="text" placeholder="Last Name">
-      <input type="email" placeholder="Your Email">
-      <input type="password" placeholder="Create Password">
+      <form action="" id="formRegister" class=" p-4 m-auto border-secondary-subtle mb-5  rounded-4 blur">
+        <input type="text" id="FN" placeholder="First Name" >
+        <input type="text" id="LN" placeholder="Last Name">
+      <input type="email" id="email3" placeholder="Your Email">
+      <input type="password" id="passwd" placeholder="Create Password">
       <div class="d-flex align-items-center justify-content-evenly my-3">
         <div>
       <label name="gender" for="male">Male</label>
@@ -70,7 +70,7 @@
        </div>
        <div>
        <label for="female" >Female</label>
-       <input type="radio" name="gender" id="female">
+       <input type="radio" id="Gender" name="gender" id="female">
        </div>
        </div>
       <div><input type="submit"></div>
@@ -118,5 +118,7 @@
     <div class="copyRight">	&copy; 2025 PoseyShop copyRight</div>
 </footer>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+ <script src="assets/js/script.js"></script>
 </body>
 </html>
