--- a/AboutUs.html
+++ b/AboutUs.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
+        <link rel="icon" href="assets/images/icon.jpeg">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
      <link href="assets/css/all.min.css" rel="stylesheet"></link>
      <link rel="stylesheet" href="assets/css/style.css">
      <link rel="stylesheet" href="assets/css/media.css">
 </head>
 <body>
+  <section>
+          <div id="loading">
+    <div class="spinner-border" role="status" >
+      <span class="visually-hidden">Loading</span>
+    </div>
+    <p>Loading...</p>
+  </div>
+      </section>
      <div class="announce">
       <p>Last Chance For Mother's Day Delivery - Order By Friday At 4PM ! <a href="mother'sDay.html">Shop Now!</a></p>
     </div>
@@ -51,7 +61,10 @@
     </div>
   </div>
 </nav>
+
+  <div id="main-content" >
 <main>
+   
     <section class="about">
         <div class="container">
             <div class="aboutContent">
@@ -81,7 +94,6 @@ From next-day delivery across Palestine to same-day delivery in major cities lik
 
 </p>
             </div>
-        </div>
         </div>
         </div>
     </section>
@@ -152,6 +164,8 @@ From next-day delivery across Palestine to same-day delivery in major cities lik
     </div>
     <div class="copyRight">	&copy; 2025 PoseyShop copyRight</div>
 </footer>
+</div>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+<script src="assets/js/script.js"> </script>
 </body>
 </html>
