--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
     <title>Contact</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
      <link href="assets/css/all.min.css" rel="stylesheet"></link>
+         <link rel="icon" href="assets/images/icon.jpeg">
+
      <link rel="stylesheet" href="assets/css/style.css">
      <link rel="stylesheet" href="assets/css/media.css">
 </head>
@@ -51,6 +53,15 @@
     </div>
   </div>
 </nav>
+<section>
+          <div id="loading">
+    <div class="spinner-border" role="status" >
+      <span class="visually-hidden">Loading</span>
+    </div>
+    <p>Loading...</p>
+  </div>
+      </section>
+    <div id="main-content" >
 <main>
     <section class="contactHeader">
         <div class="row ">
@@ -110,7 +121,6 @@
                 </div> 
                 </div>
             </div>
-        </div>
     </section>
 </main>
 <footer class="bg-body-tertiary">
@@ -151,6 +161,8 @@
     </div>
     <div class="copyRight">	&copy; 2025 PoseyShop copyRight</div>
 </footer>
+</div>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+<script src="assets/js/script.js"></script>
 </body>
 </html>
