--- a/createAccount.html
+++ b/createAccount.html
@@ -6,6 +6,8 @@
     <title>Create Account</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
      <link href="assets/css/all.min.css" rel="stylesheet"></link>
+         <link rel="icon" href="assets/images/icon.jpeg">
+
      <link rel="stylesheet" href="assets/css/style.css">
      <link rel="stylesheet" href="assets/css/media.css">
 </head>
@@ -51,6 +53,15 @@
     </div>
   </div>
 </nav>
+<section>
+    <div id="loading">
+    <div class="spinner-border" role="status" >
+      <span class="visually-hidden">Loading</span>
+    </div>
+    <p>Loading...</p>
+  </div>
+      </section>
+    <div id="main-content" >
 <section class="login">
    <h2>Create An Account</h2>
    <div class="border border-2 p-4 col-lg-6 col-md-8 m-auto border-secondary-subtle mb-5 rounded-4 blur">
@@ -117,6 +128,7 @@
     </div>
     <div class="copyRight">	&copy; 2025 PoseyShop copyRight</div>
 </footer>
+</div>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
  <script src="assets/js/script.js"></script>
