--- a/delivery.html
+++ b/delivery.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="assets/images/icon.jpeg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
      <link href="assets/css/all.min.css" rel="stylesheet"></link>
      <link rel="stylesheet" href="assets/css/style.css">
@@ -53,6 +54,15 @@
     </div>
   </div>
 </nav>
+<section>
+    <div id="loading">
+    <div class="spinner-border" role="status" >
+      <span class="visually-hidden">Loading</span>
+    </div>
+    <p>Loading...</p>
+  </div>
+      </section>
+    <div id="main-content" >
     <section class="Delivery ">
 
         <div class="container my-5">
@@ -124,6 +134,7 @@
     </div>
     <div class="copyRight">	&copy; 2025 PoseyShop copyRight</div>
 </footer>
+</div>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
