--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rosey </title>
+    <link rel="icon" href="assets/images/icon.jpeg">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
      <link href="assets/css/all.min.css" rel="stylesheet"></link>
      <link rel="stylesheet" href="assets/css/style.css">
@@ -51,6 +52,8 @@
     </div>
   </div>
 </nav>
+  <div id="main-content" >
+
     <header>
 
         <div class="headerContent">
@@ -76,7 +79,14 @@
 </div>
     </header>
     <main>
-
+      <section>
+          <div id="loading">
+    <div class="spinner-border" role="status" >
+      <span class="visually-hidden">Loading</span>
+    </div>
+    <p>Loading...</p>
+  </div>
+      </section>
       <section class="section1 " id="section1">
           <div class="container">
               <h2><i class="fa-solid fa-spa"></i> Flowers & Gifts For Every Occasion </h2>
@@ -177,7 +187,7 @@
                   <div class="row gap-5">
                   <div class="d-flex align-items-center justify-content-between">
                   <div>
-           <img src="assets/images/review_1.png" alt=""></div>
+           <img src="assets/images/fb1.jpeg" alt=""></div>
           <div ><i class="fa-solid fa-quote-right fi"></i>
            </div>
           </div>
@@ -198,7 +208,7 @@
                   <div class="row gap-5">
                   <div class="d-flex align-items-center justify-content-between">
                   <div>
-           <img src="assets/images/review_3.png" alt=""></div>
+           <img src="assets/images/fb2.jpeg" alt=""></div>
            <div ><i class="fa-solid fa-quote-right fi"></i>
            </div>
            </div>
@@ -219,7 +229,7 @@
                   <div class="row gap-5">
                   <div class="d-flex align-items-center justify-content-between">
                   <div>
-           <img src="assets/images/review_4.png" alt=""></div>
+           <img src="assets/images/fb3.jpeg" alt=""></div>
           <div ><i class="fa-solid fa-quote-right fi"></i>
                </div>
                 </div>
@@ -277,7 +287,7 @@
     </div>
     </div>
     <div class="copyRight">	&copy; 2025 PoseyShop copyRight</div>
-</footer>
+</div>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 <script src="assets/js/script.js"></script>
 </body>
