adding delivery page

--- a/cart.html
+++ b/cart.html
@@ -64,7 +64,8 @@
     </div>
 
     <div class="mt-4">
-      <button class="btn " onclick="clearCart()">Clear Cart</button>
+      <button class="Btn " onclick="clearCart()">Clear Cart</button>
+      <button  class="Btn "><a href="delivery.html">Ckeckout</a></button>
     </div>
   </div>
  </main>
