--- a/plants.html
+++ b/plants.html
@@ -47,7 +47,9 @@
       <div class="d-flex align-items-center gap-3 navContent">
         <div>
         <a href="Login.html" class="text-decoration-none">Login</a>
-        <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></div>
+        <a href="cart.html" class="position-relative"><i class="fa-solid fa-cart-shopping "></i>           
+        <span id="counter" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-dark " style="padding:1px 2px ;">0</span>
+     </a></div>
       </div>
     </div>
   </div>
@@ -122,7 +124,7 @@
            <div class="card-body">
            <p class="card-text"> Nature Pulse</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
-           <p><ins>500$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>75$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -131,7 +133,7 @@
            <div class="card-body">
            <p class="card-text">EverGreen</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i></p>
-           <p><ins>450$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>450$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
              <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -140,7 +142,7 @@
            <div class="card-body">
            <p class="card-text">Timeless Beauty</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i></p>
-           <p><ins>470$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>470$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 ">
@@ -149,7 +151,7 @@
            <div class="card-body">
            <p class="card-text"> Home Oasis</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i></p>
-           <p><ins>350$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>350$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -157,7 +159,7 @@
            <div class="card-body">
            <p class="card-text">Warmth Tree</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i></p>
-           <p><ins>465$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>465$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -166,7 +168,7 @@
            <div class="card-body">
            <p class="card-text"> Calm Breath</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
-           <p><ins>345$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>345$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -175,7 +177,7 @@
            <div class="card-body">
            <p class="card-text">  Green Allure </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
-           <p><ins>460$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>460$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -184,7 +186,7 @@
            <div class="card-body">
            <p class="card-text"> Plant Delight</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i></p>
-           <p><ins>555$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>555$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -193,7 +195,7 @@
            <div class="card-body">
            <p class="card-text"> Branch of Life</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i> <i class="fa-regular fa-star"></i></p>
-           <p><ins>456$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>456$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -204,7 +206,7 @@
            <p class="card-text">Evergreen Deals </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
            <p><del>40$</del><sub><ins>20$</ins></sub> </p>
-           <p> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -215,7 +217,7 @@
            <p class="card-text">Artificial Beauty, Authentic Savings </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
            <p><del>150$</del><sub><ins>125$</ins></sub></p>
-           <p> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -226,7 +228,7 @@
            <p class="card-text">Green Vibes, Great Deals </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
            <p><del>200$</del><sub><ins>145$</ins></sub></p>
-           <p> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
           <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -237,7 +239,7 @@
            <p class="card-text">Style that Stays, Prices that Drop </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
            <p><del>10$</del><sub><ins>5$</ins></sub></p>
-           <p> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
      </div>
